--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "session-file-store": "^1.4.0",
+    "util": "^0.12.3"
   }
 }
